--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: sudo apt-get install -y clang-format clang-tidy bear
+        run: sudo apt-get install -y clang-format clang-tidy bear libeigen3-dev
 
       - name: Generate Compilation Database
         run: |
