--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 name: C++ Code Formatter & Linter
 
 on: 
@@ -10,8 +9,8 @@ on:
       - develop
 
 permissions:
-  contents: write  
-  
+  contents: write
+
 jobs:
   format-lint:
     runs-on: ubuntu-latest
@@ -20,7 +19,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Allows pushing changes back
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Dependencies
         run: sudo apt-get install -y clang-format clang-tidy bear libeigen3-dev
@@ -35,7 +34,7 @@ jobs:
 
       - name: Run ClangFormat (Auto-Fix)
         run: |
-          find . -name "*.cpp" -o -name "*.h" | xargs clang-format -i
+          find . \( -name "*.cpp" -o -name "*.h" \) ! -name "stb*" | xargs clang-format -i
 
       - name: Run ClangTidy (Auto-Fix)
         run: |
@@ -45,7 +44,7 @@ jobs:
           else
             echo "Running clang-tidy on the following files:"
             echo "$FILES"
-            echo "$FILES" | xargs clang-tidy --fix --p=. || true  # Avoid failure if warnings exist
+            echo "$FILES" | xargs clang-tidy --fix --p=. || true  
           fi
 
       - name: Commit and Push Formatting Changes
@@ -55,61 +54,3 @@ jobs:
           git add .
           git commit -m "Auto-format C++ code with clang-format & clang-tidy" || exit 0
           git push origin HEAD:${{ github.ref_name }}
-=======
-name: C++ Code Formatter & Linter
-
-on: 
-  push:
-    branches:
-      - develop
-  pull_request:
-    branches:
-      - develop
-
-permissions:
-  contents: write  
-  
-jobs:
-  format-lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Allows pushing changes back
-
-      - name: Install Dependencies
-        run: sudo apt-get install -y clang-format clang-tidy bear libeigen3-dev
-
-      - name: Generate Compilation Database
-        run: |
-          mkdir -p build
-          cd build
-          cmake .. -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
-          cd ..
-          cp build/compile_commands.json .
-
-      - name: Run ClangFormat (Auto-Fix)
-        run: |
-          find . -name "*.cpp" -o -name "*.h" | xargs clang-format -i
-
-      - name: Run ClangTidy (Auto-Fix)
-        run: |
-          FILES=$(find . -name "*.cpp" -o -name "*.h")
-          if [ -z "$FILES" ]; then
-            echo "No C++ source files found. Skipping clang-tidy."
-          else
-            echo "Running clang-tidy on the following files:"
-            echo "$FILES"
-            echo "$FILES" | xargs clang-tidy --fix --p=. || true  # Avoid failure if warnings exist
-          fi
-
-      - name: Commit and Push Formatting Changes
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add .
-          git commit -m "Auto-format C++ code with clang-format & clang-tidy" || exit 0
-          git push origin HEAD:${{ github.ref_name }}
->>>>>>> 29f565c2bd68fc983ff6b6650f163d81ef855b12
