--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Generate Compilation Database
         run: |
+          rm -rf build
           mkdir -p build
           cd build
           cmake .. -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
